# minitt

./: .gitignore  13-inductive.hs  AST.hs  CHANGELOG.md  CIC.hs  Christiansen12.hs  Christiansen2.hs  Christiansen2Stx.hs  Christiansen5.hs  Christiansen6.hs  Christiansen6WithSum.hs  Christiansen7.hs  Main.hs  Minitt.hs  README.md  STLC.hs  Sexp.hs  UntypedLC.hs  minitt.cabal  stack.yaml  stlc.el  tiark.py
examples/: bool.rkt  christiansen5.rkt  christiansen6.rkt  christiansen7.rkt
examples/13/: christiansen7.rkt  nat.rkt
examples/little-typer/: ch1.rkt
examples/minitt/: bool.rkt  id.rkt  nat.rkt
examples/stlc/: fst.rkt  id.rkt
examples/untyped/: christiansen-sec1.rkt  christiansen-sec2.rkt  church.rkt
reference/: Core.cf  Main.hs  README.md
reference/Core/: Abs.hs  ErrM.hs  Lex.hs  Print.hs  Skel.hs  Test.hs
