cabal-version:      2.4
name:               minitt
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Siddharth Bhat
maintainer:         siddu.druid@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable stlc
    main-is:          STLC.hs

    -- Modules included in this executable, other than Main.
    other-modules: AST

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, lsp, text
    -- hs-source-dirs:   .
    default-language: Haskell2010

executable 13-inductive
    main-is: 13-inductive.hs
    build-depends:    base
    default-language: Haskell2010
